# smp-ng-fcgi2

./: CMakeLists.txt
examples/cmake/: CMakeLists.txt  main.c
include/: fcgi_stdio.h  fcgiapp.h  fcgio.h  fcgios.h
libfcgi/: fcgi-config.cmake.in  os_unix.c  os_win32.c
